Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-110312

AutoPlay property is missing from QMediaPlayer

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.7
    • 6.4.2
    • Multimedia
    • None
    • All
    • e0b8315a2 (dev)

    Description

      QMediaPlayer is missing the autoPlay property in 6.x: https://doc.qt.io/qt-5/qml-qtmultimedia-mediaplayer.html#autoPlay-prop

      This leads to weird calls to play() in signal handlers on source change or after buffering etc. autoPlay is a crucial feature and should be added again. 

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              artemiy Artem Dyomin
              inikofdoom Inik Doom
              Votes:
              1 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes